--- a/views/quote.erb
+++ b/views/quote.erb
@@ -27,9 +27,15 @@
 	</ul>
     </div>
 	<body class="container">
+        <form action="/enter" method="POST">
+          <input type="text" name="moti[quote]" value="自分の好きなモチベーションを入力してください">
+          <input type="submit" value="Submit">
+        </form>
     	<div>
-    		<h1>頭隠して尻隠さず</h1>
-    		<img src="/head.jpg" alt="Meow" style="width:100%"> </div>
+    		<img src="/head.jpg" alt="Meow" style="width:100%"> 
+        </div>
     	</div>
+      <div>
+      </div>
 	</body>
 </html>
